[package]
name = "rec-wars"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
resolver = "2"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "A top-down vehicle shooter game playable in the browser"
homepage = "https://github.com/martin-t/rec-wars"
repository = "https://github.com/martin-t/rec-wars"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["game", "wasm"]
categories = ["games"]

[profile.dev]
# Abort on panic might be a better default:
# https://vorner.github.io/2018/07/22/dont_panic.html
panic = "abort"

[profile.dev.package."*"]
# Optimize deps but not the rec-wars crate itself (tip from macroquad).
# This seems to slightly improve performance (judging by update avg/max times)
# and shouldn't meaningfully increase incremental compile times because deps only change rarely.
opt-level = 3

[profile.release]
panic = "abort"

[features]
web_splitscreen = []

[dependencies]
cvars = "0.1.0"
enumn = "0.1.3"
fnv = "1.0.7"
futures = "0.3.16"
macroquad = "0.3.7"
structopt = "0.3.22"
strum = "0.22.0"
strum_macros = "0.22.0"
thunderdome = "0.5.0"
vek = "0.15.1"

[dependencies.image]
# Dependency of macroquad with added "bmp" feature so we can load RecWar's original assets
version = "0.23.12"
default-features = false
features = ["png", "tga", "bmp"]

[dependencies.rand]
version = "0.8.3"
default-features = false
features = ["small_rng"]

[dependencies.rand_distr]
version = "0.4.0"
default-features = false

[dev-dependencies]
walkdir = "2.3.1"
