[package]
name = "rec-wars"
version = "0.1.5"
edition = "2021"
rust-version = "1.73"
resolver = "2"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
description = "A top-down vehicle shooter game playable in the browser"
homepage = "https://github.com/martin-t/rec-wars"
repository = "https://github.com/martin-t/rec-wars"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["game", "wasm"]
categories = ["games"]

[profile.dev]
# Abort on panic might be a better default: https://vorner.github.io/2018/07/22/dont_panic.html
# This makes backtraces useless, see .cargo/config-example.toml for a fix.
# It also means that tests need a separate build of all deps because they use unwinding,
# though at least the artifacts from build and test can coexist
# so alternating between them won't cause a full build each time.
# Seems to have no impact on incremental compile times.
# Keep "unwind" in debug mode so we can use tests more easily.
#panic = "abort"
# Can be changed without recompiling all deps
# Almost doubles compile time (from 1.5 s to 2.7 s).
#opt-level = 1

[profile.dev.package."*"]
# Optimize deps but not the rec-wars crate itself (tip from macroquad).
# This seems to slightly improve performance (judging by update avg/max times)
# and shouldn't meaningfully increase incremental compile times because deps only change rarely.
opt-level = 3

[profile.release]
# Using "abort" in release mode might be better because otherwise the program can get stuck
# if we use threads wrong and crashing is slightly better than getting stuck.
panic = "abort"

[features]
web_splitscreen = []

[dependencies]
bincode = "1.3.3"
cvars = "0.4.2"
cvars-console-macroquad = "0.3.0"
fnv = "1.0.7"
inline_tweak = "1.1.1"
macroquad = "=0.4.8" # Exact version because of the image crate https://github.com/not-fl3/macroquad/issues/494
rand_xoshiro = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
thunderdome = "0.6.1"
time = { version = "0.3.36", features = ["formatting"] }
vek = "0.17.0"

[dependencies.image]
# Dependency of macroquad with added "bmp" feature so we can load RecWar's original assets.
# Must be the same version as macroquad, even if that means it's outdated.
version = "0.24.9"
default-features = false
features = ["png", "tga", "bmp"]

[dependencies.rand]
version = "0.8.3"
default-features = false
features = ["small_rng"]

[dependencies.rand_distr]
version = "0.4.0"
default-features = false

[dev-dependencies]
walkdir = "2.5.0"

# Note: sometimes it's necessary to run cargo update after patching a dependency.
[patch.crates-io]
#cvars = { path = "../cvars/cvars" }
#cvars-console-macroquad = { path = "../cvars/cvars-console-macroquad" }
