[package]
name = "cvars-derive"
version = "0.0.0"
edition = "2018"
autotests = false

[lib]
proc-macro = true

[[bin]]
name = "testing"
path = "main.rs"

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "1.0.74", features = ["extra-traits"] }
quote = "1.0.9"
